--- a/Find One/Storyboard/Result.storyboard
+++ b/Find One/Storyboard/Result.storyboard
@@ -1297,7 +1297,7 @@
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RSu-Af-mqa">
                                                                                 <rect key="frame" x="0.0" y="25" width="393" height="296.66666666666669"/>
                                                                                 <subviews>
-                                                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Wf-Tb-pn5">
+                                                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Wf-Tb-pn5">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="296.66666666666669"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda. Lorem ipsum dolor sit er elit lamet, Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda. Lorem ipsum dolor sit er elit lamet,  </string>
@@ -1318,7 +1318,6 @@
                                                                         </subviews>
                                                                     </stackView>
                                                                 </subviews>
-                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" priority="250" constant="149" id="8wN-el-Bk8"/>
                                                                     <constraint firstItem="Pt0-y5-qAO" firstAttribute="top" secondItem="h6X-ju-vTx" secondAttribute="top" id="GW0-vM-XQn"/>
@@ -1377,11 +1376,11 @@
                                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                                             <subviews>
                                                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bqC-ee-3n2">
-                                                                                                    <rect key="frame" x="121.66666666666669" y="20" width="150" height="50"/>
+                                                                                                    <rect key="frame" x="121.66666666666669" y="25" width="150" height="45"/>
                                                                                                     <color key="backgroundColor" red="0.08235294118" green="0.61176470589999998" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
                                                                                                     <constraints>
                                                                                                         <constraint firstAttribute="width" constant="150" id="gix-09-GUl"/>
-                                                                                                        <constraint firstAttribute="height" constant="50" id="mP9-l5-mTJ"/>
+                                                                                                        <constraint firstAttribute="height" constant="45" id="mP9-l5-mTJ"/>
                                                                                                     </constraints>
                                                                                                     <fontDescription key="fontDescription" name="Manrope-Regular" family="Manrope" pointSize="20"/>
                                                                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -1419,7 +1418,7 @@
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" priority="250" constant="300" id="9aY-Al-awp"/>
+                                                                    <constraint firstAttribute="height" constant="300" id="9aY-Al-awp"/>
                                                                     <constraint firstItem="uRx-x7-yz2" firstAttribute="leading" secondItem="tBG-2n-ZON" secondAttribute="leading" id="KGJ-P4-Eux"/>
                                                                     <constraint firstAttribute="bottom" secondItem="uRx-x7-yz2" secondAttribute="bottom" id="Skx-L1-L4o"/>
                                                                     <constraint firstItem="uRx-x7-yz2" firstAttribute="top" secondItem="tBG-2n-ZON" secondAttribute="top" id="dY3-BI-Tcp"/>
